# web_tools

./: .envrc  .gitignore  .gitleaks.toml  .markdown-link-check.json  .markdownlint.yaml  .mdformat.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RTK.md  SETUP.md  _copier_answers.yml  pyproject.toml  renovate.json5  typos.toml
.agents/skills/changed/: SKILL.md
.agents/skills/changed/agents/: openai.yaml
.agents/skills/code-guardrails/: SKILL.md
.agents/skills/code-guardrails/agents/: openai.yaml
.agents/skills/finish-worktree/: SKILL.md
.agents/skills/finish-worktree/agents/: openai.yaml
.agents/skills/git-finish/: SKILL.md
.agents/skills/git-finish/agents/: openai.yaml
.agents/skills/git-finish/references/: pull_request_template.md
.agents/skills/handoff/: SKILL.md
.agents/skills/handoff/agents/: openai.yaml
.agents/skills/plan-internal-from-contract/: SKILL.md
.agents/skills/plan-internal-from-contract/agents/: openai.yaml
.agents/skills/plan-internal-from-contract/references/: implementation_notes_template.md  implementation_phase_template.md  plan_root_readme_template.md  planning-protocol.md
.agents/skills/plan-internal-from-contract/references/protocol/: 01-architecture-baseline.md  02-discovery-stage.md  03-implementation-plan-structure.md  04-phase-rules.md  05-final-state-and-pass-criteria.md  06-implementation-boundaries.md  README.md
.agents/skills/python-library-rules/: SKILL.md
.agents/skills/python-library-rules/agents/: openai.yaml
.agents/skills/python-library-rules/references/: README.md
.agents/skills/python-library-rules/references/authoring/: README.md  reference_authoring_template.md
.agents/skills/python-library-rules/references/core/: README.md  comment_template.md  comment_traceability_pattern.md  config_pattern.md  defaults_pattern.md  docstring_template.md  exceptions_pattern.md  logging_pattern.md  public_api_pattern.md
.agents/skills/python-library-rules/references/docs/: README.md  dependencies_doc_template.md  (+7 more)
.agents/skills/python-library-rules/scripts/: check_docs_shape.py
.agents/skills/warmup/: SKILL.md
.agents/skills/warmup/agents/: openai.yaml
.devcontainer/: Dockerfile  Dockerfile.ci  devcontainer.json
.github/: MAINTAINER_SETUP.md  pull_request_template.md
.github/actions/setup-dev-env/: action.yml
.github/workflows/: build-ci-image.yml  ci.yml  python-lib-ci-baseline.yml  python-lib-ci-e2e-slice.yml  python-lib-ci-package.yml  release.yml  sync-starter-template.yml
docs/: README.md
docs/web_tools/: README.md  dependencies.md  usage.md
docs/web_tools/architecture/: README.md  system.md
docs/web_tools/architecture/concepts/: README.md  fetch-cache-and-page-artifacts.md  html-conversion-and-visual-manifest.md  media-extraction-and-download-policy.md  public-boundary-and-errors.md  quote-text-and-elements.md
docs/web_tools/architecture/flows/: README.md  page-artifact-lifecycle.md
docs/web_tools/verification/: README.md  public-boundary-and-errors.md  workbench.md
docs/web_tools/verification/e2e/: README.md  examples.md  fetch-cache-and-page-artifacts.md  html-conversion-and-visual-manifest.md  media-extraction-and-download-policy.md  public-boundary.md  public-output-and-errors.md  quote-text-and-elements.md
examples/: __init__.py
examples/web_tools/: __init__.py
scripts/: README.md
scripts/ci/: local_ci.sh
scripts/env/: doctor.sh  project_config.sh  setup.sh
src/web_tools/: __init__.py
src/web_tools/_api/: __init__.py  cache.py  config.py  defaults.py  errors.py  html.py  media.py  quoting.py  types.py
src/web_tools/_internal/: __init__.py
src/web_tools/_internal/cache/: __init__.py  manager.py
src/web_tools/_internal/config/: __init__.py  assembly.py  models.py  state.py  validation.py
src/web_tools/_internal/html_reader/: __init__.py  html_processing.py  markdown.py  mhtml_media.py  service.py  visual_elements.py
src/web_tools/_internal/media_downloader/: __init__.py  cache_manager.py  media_cache.py  media_http.py  media_limits.py  media_routing.py  service.py
src/web_tools/_internal/page_artifacts/: __init__.py  cache.py  crawl.py  fetch.py  types.py
src/web_tools/_internal/quote_manager/: __init__.py  annotation.py  extract_word_boxes.js  playwright_loader.py  quote_capture.py  quote_validation.py  service.py  text_normalization.py
src/web_tools/_internal/runtime/: __init__.py  facade.py
tests/: README.md  __init__.py  conftest.py
tests/web_tools/: __init__.py  conftest.py
tests/web_tools/e2e/: __init__.py  conftest.py
tests/web_tools/e2e/examples/: __init__.py  test_examples_smoke.py
tests/web_tools/e2e/fetch_cache_and_page_artifacts/: __init__.py  test_cache_behavior.py
tests/web_tools/e2e/html_conversion_and_visual_manifest/: __init__.py  test_html2md_pipeline.py
tests/web_tools/e2e/media_extraction_and_download_policy/: __init__.py  test_media_policy_pipeline.py
tests/web_tools/e2e/public_boundary/: __init__.py  test_public_config_pipeline.py
tests/web_tools/e2e/public_output_and_errors/: __init__.py  test_public_boundary_contracts.py
tests/web_tools/e2e/quote_text_and_elements/: __init__.py  test_quote_math_element_pipeline.py  test_quote_math_text_pipeline.py  test_quote_picture_pipeline.py  test_quote_table_pipeline.py  test_quote_text_edge_cases.py  test_quote_text_normalization_cases.py
tests/web_tools/integration/: test_config_lifecycle.py
tests/web_tools/property_based/public_contract/: test_config_contract.py  test_fetch_cache_and_page_artifacts.py  test_html_conversion_and_visual_manifest.py  test_media_extraction_and_download_policy.py  test_public_output_and_errors.py  test_quote_text_and_elements.py
tests/web_tools/unit/: test_public_config_contract.py  test_public_html_contract.py  test_public_media_contract.py  test_public_package.py
workbench/: __init__.py
workbench/web_tools/: __init__.py  fetch_cache_and_page_artifacts.py  html_conversion_and_visual_manifest.py  media_extraction_and_download_policy.py  quote_text_and_elements.py
(+40 files in other folders)
